# GovPrepAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py  schemas.py
app/agents/: __init__.py  agent_runners.py  llm.py  prompts.py  runners.py
app/api/: routes.py
app/core/: __init__.py  config.py  exam_knowledge.py  exam_types.py
app/services/: __init__.py  rag.py
app/stategraph/: __init__.py  json_parser.py  nodes.py  pipeline.py  schemas.py
app/ui/: streamlit_app.py
